<resources>
    <string name="app_name" translatable="false">Time2Talk</string>
    <string name="initvalue1" translatable="false">0%</string>
    <string name="initvalue2" translatable="false">0:00:00</string>
    <string name="total">Total</string>
    <string name="namemodified">The name of attendee has been modified</string>
    <string name="resetconfirmation">Are you sure you want to reset the datas?</string>
    <string name="datareset">Data have been reset</string>
    <string name="participantremove">Participant suppressed.</string>
    <string name="parameters">Parameters</string>
    <string name="clicktoadd">Click + to add participant</string>
    <string name="general">General</string>
    <string name="tempsmax">Max duration (minutes):</string>
    <string name="tempsmaxdesc">Max duration for each user for the meeting</string>
    <string name="multiplespeaker">Multiple speakers at once</string>
    <string name="multiplespeakersdesc">Possibility to have more than one speaker at the same time</string>
    <string name="soundwarning">Warning sound</string>
    <string name="soundwarningdesc">Warning sound when time is over for an user</string>
    <string name="maxduration">Duration max</string>
    <string name="minutes">minute(s)</string>
    <string name="sendinfos">Send informations</string>
    <string name="meetinginfos">Meeting informations</string>
    <string name="confirmdatazero">Are you sure you want to delete data ?</string>
    <string name="dataset2zero">Data have been reset</string>
    <string name="datanotset2zero">Data have not been reset</string>
    <string name="participant">Attendee</string>
    <string name="confirmation">Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="modification">Modification</string>
    <string name="entervalue">Please enter new value in second</string>
    <string name="ok">OK</string>
    <string name="talknomore">" is not talking anymore."</string>
    <string name="starttalking">" is starting to talk."</string>
    <string name="participantsuppressed">Participant suppressed.</string>
    <string name="confirmparticipantsupression">Are you sure you want to remove this participant ?</string>
    <string name="optimize_meeting">Optimize your meetings</string>
    <string name="about">About</string>
    <string name="share">Share the application</string>
    <string name="check_version">Check if new version available</string>
    <string name="sendcomment">Send email to the developer</string>
    <string name="sharecomment">You will like this application.</string>
    <string name="woman">Woman</string>
    <string name="saveMeetingInfos">Save meeting</string>
    <string name="loadMeetingInfos">Reload last meeting</string>
</resources>
