<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/mnuPrefs"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/parameters" />
    <item android:id="@+id/mnuSave"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/saveMeetingInfos" />
    <item android:id="@+id/mnuLoad"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/loadMeetingInfos" />
    <item
        android:id="@+id/mnuAbout"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/about">
    </item>
    <item android:id="@+id/mnu_check_version"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/check_version">
    </item>
    <item android:id="@+id/mnu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share">
    </item>
    <item android:id="@+id/mnu_sendcomment"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/sendcomment">
    </item>

</menu>

